--- a/chessboard/grandmaster/src/app/app.component.css
+++ b/chessboard/grandmaster/src/app/app.component.css
@@ -1,6 +1,6 @@
 :host /deep/ p
 {
-    font-size: 40px;
+    font-size: 60px;
     margin: 0;
     text-align: center;
 }
@@ -8,31 +8,96 @@
 {
     background-color: #03A9F4;
     float: left;
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
 }
 .black
 {
     background-color: #1976D2;
     float: left;
-    height: 50px;
-    width: 50px;
+    height: 70px;
+    width: 70px;
 }
 .rank
 {
     display: block;
     float: left;
-    height: 50px;
-    width: 400px;
+    height: 70px;
+    width: 600px;
+}
+.whitecorner
+{
+    background-color: #03A9F4;
+    float: left;
+    height: 20px;
+    width: 20px;
+}
+.blackcorner
+{
+    background-color: #1976D2;
+    float: left;
+    height: 20px;
+    width: 20px;
+}
+.whiteside
+{
+    background-color: #03A9F4;
+    float: left;
+    height: 70px;
+    width: 20px;
+}
+.blackside
+{
+    background-color: #1976D2;
+    float: left;
+    height: 70px;
+    width: 20px;
+}
+.upborder
+{
+    display: block;
+    float: left;
+    height: 20px;
+    overflow: hidden;
+    width: 600px;
+}
+.downborder
+{
+    display: block;
+    float: left;
+    height: 20px;
+    overflow: hidden;
+    width: 600px;
 }
 .board
 {
-    height: 400px;
-    width: 400px;
+    height: 600px;
+    margin: 0;
+    padding: 0;
+    width: 600px;
+}
+body
+{
+    height: 600px;
+    margin: 0;
+    padding: 0;
+    width: 600px;
 }
 :host /deep/ .white-piece
 {
     color: white; 
+}
+:host /deep/ .white-letter
+{
+    color: white; 
+    font-size: 15px;
+}
+:host /deep/ .vertical-white-letter 
+{
+    color: white; 
+    font-size: 15px;
+    height: 70px;
+    padding-top: 25px;
 }
 :host /deep/ .black-piece
 {
