--- a/chessboard/grandmaster/src/app/app.component.html
+++ b/chessboard/grandmaster/src/app/app.component.html
@@ -5,7 +5,20 @@
     </head>
     <body>
         <div cdkDropListGroup class = "board">
+            <div  class = "upborder" name = "upborder">
+                <div class = "whitecorner"></div>          
+                <div class = "black"></div>
+                <div class = "white"></div>          
+                <div class = "black"></div>
+                <div class = "white"></div>          
+                <div class = "black"></div>
+                <div class = "white"></div>          
+                <div class = "black"></div>
+                <div class = "white"></div>          
+                <div class = "blackcorner"></div>
+            </div>    
             <div  class = "rank" name = "fila8">
+                <div class = "blackside"><p class="vertical-white-letter"><b>8</b></p></div>
                 <div cdkDropList [cdkDropListData] = "a8" class = "white" name = "a8" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "41" *ngFor="let item of a8" innerHtml="{{item}}"></div>
                 </div>
@@ -30,8 +43,10 @@
                 <div cdkDropList [cdkDropListData] = "h8" class = "black" name = "h8" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "48" *ngFor="let item of h8" innerHtml="{{item}}"></div>
                 </div>
+                <div class = "whiteside"></div>          
             </div>
             <div  class = "rank" name = "fila7">
+                <div class = "whiteside"><p class="vertical-white-letter"><b>7</b></p></div>          
                 <div cdkDropList [cdkDropListData] = "a7" class = "black" name = "a7" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "31" *ngFor="let item of a7" innerHtml="{{item}}"></div>
                 </div>
@@ -56,8 +71,10 @@
                 <div cdkDropList [cdkDropListData] = "h7" class = "white" name = "h7" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "38" *ngFor="let item of h7" innerHtml="{{item}}"></div>
                 </div>
+                <div class = "blackside"></div>          
             </div>
             <div  class = "rank" name = "fila6">
+                <div class = "blackside"><p class="vertical-white-letter"><b>6</b></p></div>          
                 <div cdkDropList [cdkDropListData] = "a6" class = "white" name = "c6" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "51" *ngFor="let item of a6"innerHtml="{{item}}"></div>
                 </div>
@@ -82,8 +99,10 @@
                 <div cdkDropList [cdkDropListData] = "h6" class = "black" name = "h6" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "58" *ngFor="let item of h6" innerHtml="{{item}}"></div>
                 </div>
+                <div class = "whiteside"></div>          
             </div>
             <div  class = "rank" name = "fila5">
+                <div class = "whiteside"><p class="vertical-white-letter"><b>5</b></p></div>          
                 <div cdkDropList [cdkDropListData] = "a5" class = "black" name = "a5" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "61" *ngFor="let item of a5" innerHtml="{{item}}"></div>
                 </div>
@@ -108,8 +127,10 @@
                 <div cdkDropList [cdkDropListData] = "h5" class = "white" name = "h5" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "68" *ngFor="let item of h5" innerHtml="{{item}}"></div>
                 </div>
+                <div class = "blackside"></div>          
             </div>
             <div  class = "rank" name = "fila4">
+                <div class = "blackside"><p class="vertical-white-letter"><b>4</b></p></div>          
                 <div cdkDropList [cdkDropListData] = "a4" class = "white" name = "a4" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "71" *ngFor="let item of a4" innerHtml="{{item}}"></div>
                 </div>
@@ -134,8 +155,10 @@
                 <div cdkDropList [cdkDropListData] = "h4" class = "black" name = "h4" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "78" *ngFor="let item of h4" innerHtml="{{item}}"></div>
                 </div>
+                <div class = "whiteside"></div>          
             </div>
             <div  class = "rank" name = "fila3">
+                <div class = "whiteside"><p class="vertical-white-letter"><b>3</b></p></div>          
                 <div cdkDropList [cdkDropListData] = "a3" class = "black" name = "a3" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "81" *ngFor="let item of a3" innerHtml="{{item}}"></div>
                 </div>
@@ -160,8 +183,10 @@
                 <div cdkDropList [cdkDropListData] = "h3" class = "white" name = "h3" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "88" *ngFor="let item of h3"innerHtml="{{item}}"></div>
                 </div>
+                <div class = "blackside"></div>          
             </div>
             <div  class = "rank" name = "fila2">
+                <div class = "blackside"><p class="vertical-white-letter"><b>2</b></p></div>          
                 <div cdkDropList [cdkDropListData] = "a2" class = "white" name = "a2" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "21" *ngFor="let item of a2" innerHtml="{{item}}"></div>
                 </div>
@@ -186,8 +211,10 @@
                 <div cdkDropList [cdkDropListData] = "h2" class = "black" name = "h2" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "28" *ngFor="let item of h2" innerHtml="{{item}}"></div>
                 </div>
+                <div class = "whiteside"></div>          
             </div>
             <div  class = "rank" name = "fila1">
+                <div class = "whiteside"><p class="vertical-white-letter"><b>1</b></p></div>          
                 <div cdkDropList [cdkDropListData] = "a1" class = "black" name = "a1" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "11" *ngFor="let item of a1" innerHtml="{{item}}"></div>
                 </div>
@@ -212,7 +239,20 @@
                 <div cdkDropList [cdkDropListData] = "h1" class = "white" name = "h1" (cdkDropListDropped)="drop($event)">
                     <div cdkDrag id = "18" *ngFor="let item of h1" innerHtml="{{item}}"></div>
                 </div>
+                <div class = "blackside"></div>          
             </div>
+            <div  class = "downborder" name = "downborder">
+                <div class = "blackcorner"></div>
+                <div class = "white"><p class="white-letter"><b>a</b></p></div>          
+                <div class = "black"><p class="white-letter"><b>b</b></p></div>
+                <div class = "white"><p class="white-letter"><b>c</b></p></div>          
+                <div class = "black"><p class="white-letter"><b>d</b></p></div>
+                <div class = "white"><p class="white-letter"><b>e</b></p></div> 
+                <div class = "black"><p class="white-letter"><b>f</b></p></div>
+                <div class = "white"><p class="white-letter"><b>g</b></p></div>          
+                <div class = "black"><p class="white-letter"><b>h</b></p></div>
+                <div class = "whitecorner"></div>          
+             </div>    
         </div>
     </body>
 </html>
