--- a/chessboard/grandmaster/src/app/app.component.css
+++ b/chessboard/grandmaster/src/app/app.component.css
@@ -4,6 +4,12 @@
     margin: 0;
     text-align: center;
 }
+:host /deep/ span
+{
+    font-size: 60px;
+    margin: 0;
+    text-align: center;
+}
 .white 
 {
     background-color: #03A9F4;
