--- a/chessboard/chess/chess/src/app/app.component.css
+++ b/chessboard/chess/chess/src/app/app.component.css
@@ -116,7 +116,7 @@
 .example-list.cdk-drop-list-dragging .example-box:not(.cdk-drag-placeholder) {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
-.white-piece
+:host /deep/ .white-piece
 {
     color: white; 
 }
@@ -135,7 +135,7 @@
     height: 70px;
     overflow: hidden;
 }
-.black-piece
+:host /deep/ .black-piece
 {
     color: black;
 }
