--- a/chessboard/chess/chess/src/app/app.component.html
+++ b/chessboard/chess/chess/src/app/app.component.html
@@ -13,7 +13,7 @@
     <div class = "blackcorner"></div>
   </div>
 
-  <div class = "blackside"><span class = "vertical-white-letter"><b>8</b></span></div>
+  <div class = "blackside"><div class = "vertical-white-letter"><b>8</b></div></div>
   <div class = "container">
     <div
       cdkDropList
@@ -88,7 +88,7 @@
   </div>
   <div class = "whiteside"></div>          
 
-  <div class = "whiteside"><span class = "vertical-white-letter"><b>7</b></span></div>
+  <div class = "whiteside"><div class = "vertical-white-letter"><b>7</b></div></div>
   <div class = "container">
     <div
       cdkDropList
@@ -163,7 +163,7 @@
   </div>
   <div class = "blackside"></div>          
 
-  <div class = "blackside"><span class = "vertical-white-letter"><b>6</b></span></div>
+  <div class = "blackside"><div class = "vertical-white-letter"><b>6</b></div></div>
   <div class = "container">
     <div
       cdkDropList
@@ -238,7 +238,7 @@
   </div>
   <div class = "whiteside"></div>          
 
-  <div class = "whiteside"><span class = "vertical-white-letter"><b>5</b></span></div>
+  <div class = "whiteside"><div class = "vertical-white-letter"><b>5</b></div></div>
   <div class = "container">
     <div
       cdkDropList
@@ -313,7 +313,7 @@
   </div>
   <div class = "blackside"></div>          
 
-  <div class = "blackside"><span class = "vertical-white-letter"><b>4</b></span></div>
+  <div class = "blackside"><div class = "vertical-white-letter"><b>4</b></div></div>
   <div class = "container">
     <div
       cdkDropList
@@ -388,7 +388,7 @@
   </div>
   <div class = "whiteside"></div>          
 
-  <div class = "whiteside"><span class = "vertical-white-letter"><b>3</b></span></div>
+  <div class = "whiteside"><div class = "vertical-white-letter"><b>3</b></div></div>
   <div class = "container">
     <div
       cdkDropList
@@ -463,7 +463,7 @@
   </div>
   <div class = "blackside"></div>          
 
-  <div class = "blackside"><span class = "vertical-white-letter"><b>2</b></span></div>
+  <div class = "blackside"><div class = "vertical-white-letter"><b>2</b></div></div>
   <div class = "container">
     <div
       cdkDropList
@@ -538,7 +538,7 @@
   </div>
   <div class = "whiteside"></div>          
 
-  <div class = "whiteside"><span class = "vertical-white-letter"><b>1</b></span></div>
+  <div class = "whiteside"><div class = "vertical-white-letter"><b>1</b></div></div>
   <div class = "container">
     <div
       cdkDropList
