Moves of the Pawns almosr ready
Moves of the Pawns almosr ready

--- a/chessboard/chess/chess/src/app/app.component.css
+++ b/chessboard/chess/chess/src/app/app.component.css
@@ -71,7 +71,7 @@
 }
 .red
 {
-    background-color: #e60000;
+    background-color: #00b36b;
     float: left;
     height: 70px;
     overflow: hidden;
@@ -80,7 +80,7 @@
 }
 .softred
 {
-  background-color: #ff6666;
+  background-color: #00cc7a;
   float: left;
   height: 70px;
   overflow: hidden;
