April 6, Saturday 2:44 am
Last move highlighted.
One move per turn
Pieces of other color are blocker during opponent turn
Algebraic notation ready for capture and moves

--- a/chessboard/chess/chess/src/app/app.component.css
+++ b/chessboard/chess/chess/src/app/app.component.css
@@ -89,6 +89,24 @@
     width: 70px;
     display: block;
 }
+.yellow
+{
+    background-color: #FFA726;
+    float: left;
+    height: 70px;
+    overflow: hidden;
+    width: 70px;
+    display: block;
+}
+.softyellow
+{
+    background-color: #FFB74D;
+    float: left;
+    height: 70px;
+    overflow: hidden;
+    width: 70px;
+    display: block;
+}
 .container
 {
     background: transparent;
